@@ -4,7 +4,7 @@
     <groupId>org.zalando</groupId>
     <artifactId>problem-parent</artifactId>
     <name>problem</name>
-    <version>0.28.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <description>library that implements application/problem+json</description>
     <packaging>pom</packaging>
     <url>https://github.com/zalando/problem</url>
@@ -29,7 +29,8 @@
     </developers>
     <modules>
         <module>problem</module>
-        <module>jackson-datatype-problem</module>
+        <module>problem-jackson2</module>
+        <module>problem-jackson3</module>
         <module>problem-gson</module>
     </modules>
     <scm>
@@ -39,9 +40,10 @@
     </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <junit-jupiter.version>5.8.2</junit-jupiter.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.release>17</maven.compiler.release>
+        <junit-jupiter.version>5.10.1</junit-jupiter.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -54,23 +56,22 @@
             <dependency>
                 <groupId>org.checkerframework</groupId>
                 <artifactId>checker-qual</artifactId>
-                <version>3.48.1</version>
+                <version>3.52.1</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.18.26</version>
+                <version>1.18.30</version>
                 <scope>provided</scope>
             </dependency>
-            <!-- 
-                Only needed because lombok has a weird dependency to it.
-                https://medium.com/@Leejjon_net/youll-have-this-problems-when-you-add-lombok-to-a-modular-java-11-micro-service-832f55911bc5
+            <!--
+                Only needed because lombok has a dependency to it.
             -->
             <dependency>
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct-processor</artifactId>
-                <version>1.5.3.Final</version>
+                <version>1.5.5.Final</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -103,7 +104,7 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-nop</artifactId>
-                <version>1.7.36</version>
+                <version>2.0.9</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -121,13 +122,13 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>4.4.0</version>
+                <version>5.8.0</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.jayway.jsonpath</groupId>
                 <artifactId>json-path-assert</artifactId>
-                <version>2.7.0</version>
+                <version>2.10.0</version>
                 <scope>test</scope>
                 <exclusions>
                     <exclusion>
@@ -193,7 +194,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>3.0.0</version>
+                    <version>3.4.1</version>
                     <executions>
                         <execution>
                             <id>enforce-maven</id>
@@ -234,74 +235,41 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.2.0</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.moditect</groupId>
-                    <artifactId>moditect-maven-plugin</artifactId>
-                    <version>1.0.0.RC2</version>
-                    <!-- 
-                        This plugin provides most of the heavy lifting to support Java 9+,
-                        until we move away from Java 8 (in favor of 11 or a newer LTS).
-
-                        The plugin does:
-                          - generate Java 9 compatible module-info.class (without a 2- or 3-pass compile step)
-                          - put module-info.class within META-INF/versions/9 (Multi-Release JAR),
-                            to maximize backwards compatibility with Java 8
-
-                        The plugin doesn't:
-                          - detect split package situations
-                          - warn about typos in package names
-
-                        Once we move to Java 9 (or higher) we should get rid of this plugin.
-                    -->
-                    <executions>
-                        <execution>
-                            <id>add-module-infos</id>
-                            <phase>package</phase>
-                            <goals>
-                                <goal>add-module-info</goal>
-                            </goals>
-                            <configuration>
-                                <jvmVersion>9</jvmVersion>
-                                <module>
-                                    <moduleInfoFile>${project.build.sourceDirectory}/module-info.java</moduleInfoFile>
-                                </module>
-                            </configuration>
-                        </execution>
-                    </executions>
+                    <version>3.4.0</version>
+                    <configuration>
+                        <propertiesEncoding>UTF-8</propertiesEncoding>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.10.1</version>
-                    <!-- TODO compile once with Java 9 to check modules -->
+                    <version>3.11.0</version>
                     <configuration>
+                        <release>${maven.compiler.release}</release>
                         <compilerArgs>
                             <compilerArg>-Xlint:unchecked,deprecation</compilerArg>
                             <compilerArg>-Werror</compilerArg>
                             <compilerArg>-parameters</compilerArg>
                         </compilerArgs>
-                        <excludes>
-                            <exclude>module-info.java</exclude>
-                        </excludes>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.2</version>
+                    <version>3.2.3</version>
                     <configuration>
                         <parallel>classesAndMethods</parallel>
                         <threadCount>1</threadCount>
                         <perCoreThreadCount>true</perCoreThreadCount>
                         <useFile>false</useFile>
+                        <useModulePath>false</useModulePath>
+                        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.8.8</version>
+                    <version>0.8.11</version>
                     <executions>
                         <execution>
                             <id>prepare-agent</id>
@@ -362,7 +330,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>versions-maven-plugin</artifactId>
-                    <version>2.18.0</version>
+                    <version>2.19.1</version>
                     <configuration>
                         <generateBackupPoms>false</generateBackupPoms>
                     </configuration>
@@ -370,7 +338,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.2.2</version>
+                    <version>3.3.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -382,10 +350,6 @@
             <plugin>
                 <groupId>org.basepom.maven</groupId>
                 <artifactId>duplicate-finder-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.moditect</groupId>
-                <artifactId>moditect-maven-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
